Fixed extra padding at card bottom

--- a/homepage_edits/category_grid/category_grids.css
+++ b/homepage_edits/category_grid/category_grids.css
@@ -62,7 +62,6 @@ img.grid-item-image {
     text-align: center;
 }
 .grid-item-image {
-    padding-bottom: 10%;
     vertical-align: bottom;
 }
 
